@@ -2,6 +2,7 @@ This file shows the changes in this release of xPDO.
 
 xPDO 2.0.0-rc2
 ====================================
+- [#2419] Add defined join criteria when custom criteria is provided to xPDOObject::getMany()
 - [#2416] Add :NOT IN operator support for array value bindings
 - [#2404] Allow xPDOTransport::install to be aborted when an xPDOVehicle fails to install
 - [#XPDO-64] Fix xPDO::logTarget not to lose options after first call to xPDO::_log()
